--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,4 +1,4 @@
-name: Continuous Deployment - Build and Deploy to GKE
+name: Continuous Deployment - Build, Deploy, and Test
 
 on:
   push:
@@ -20,7 +20,6 @@ jobs:
     permissions:
       contents: 'read'
       id-token: 'write'
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -37,22 +36,18 @@ jobs:
     - name: Configure Docker
       run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev
 
-    # This step writes the secret to a temp file
     - name: Write SA key to file
       run: echo '${{ secrets.GCP_SA_KEY }}' > gcp_sa_key.json
 
     - name: Build Docker Image
       run: |
-        # This command uses BuildKit to securely pass the secret file
-        # The secret is available inside the Dockerfile at RUN --mount=type=secret,id=gcp-sa-key
         DOCKER_BUILDKIT=1 docker build \
           --secret id=gcp-sa-key,src=gcp_sa_key.json \
           -t ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
           .
 
-    # This step cleans up the temporary key file
     - name: Remove SA key file
-      if: always() # Always run this step, even if the build fails
+      if: always()
       run: rm -f gcp_sa_key.json
 
     - name: Push Docker Image to GAR
@@ -65,7 +60,6 @@ jobs:
     permissions:
       contents: 'read'
       id-token: 'write'
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -85,18 +79,66 @@ jobs:
     - name: Prepare K8s Manifest
       run: |
         sed -i "s|IMAGE_PLACEHOLDER|${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}|g" k8s/deployment.yml
-        echo "--- Updated k8s/deployment.yml: ---"
-        cat k8s/deployment.yml
         
     - name: Deploy to GKE
       run: |
         kubectl apply -f k8s/deployment.yml
-        echo "Deployment started. Waiting for rollout to complete..."
+        # This is the new line that applies the HPA
+        kubectl apply -f k8s/hpa.yml
+        echo "Deployment started. Waiting for rollout..."
         kubectl rollout status deployment/iris-api-deployment --timeout=120s
         
     - name: Show Service IP
       run: |
-        echo "Deployment successful! Wait a minute for the LoadBalancer IP to be assigned."
+        echo "Deployment successful! Waiting for LoadBalancer IP..."
         kubectl get service iris-api-service
 
+  stress-test-deployment:
+    name: ⚡ Stress Test Deployment
+    runs-on: ubuntu-latest
+    needs: deploy-to-gke # Runs only after deployment succeeds
 
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Install wrk and kubectl
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y wrk
+        
+    - name: Authenticate to Google Cloud
+      id: auth
+      uses: 'google-github-actions/auth@v2'
+      with:
+        credentials_json: '${{ secrets.GCP_SA_KEY }}'
+
+    - name: Set up GKE credentials
+      uses: 'google-github-actions/get-gke-credentials@v2'
+      with:
+        cluster_name: ${{ env.GKE_CLUSTER }}
+        location: ${{ env.GKE_ZONE }}
+
+    - name: Get External IP and run test
+      run: |
+        echo "Waiting for External IP..."
+        EXTERNAL_IP=""
+        while [ -z $EXTERNAL_IP ]; do
+          # This loop waits for the LoadBalancer to get a public IP
+          sleep 10
+          EXTERNAL_IP=$(kubectl get service iris-api-service -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+          echo "Current IP: $EXTERNAL_IP"
+        done
+
+        echo "✅ IP found: $EXTERNAL_IP"
+        echo "--- Starting stress test (1000+ requests) ---"
+        
+        # Run wrk: -t4 (4 threads), -c150 (150 concurrent connections), -d30s (for 30 seconds)
+        # This will generate tens of thousands of requests
+        wrk -t4 -c150 -d30s -s tests/post.lua http://$EXTERNAL_IP/predict
+
+        echo "--- Test complete. Checking HPA status: ---"
+        kubectl get hpa iris-api-hpa
+
+        echo "--- Checking Pod status: ---"
+        kubectl get pods
