--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: iris-api-deployment
 spec:
-  replicas: 2 # Run 2 copies of our app
+  replicas: 1 # Start with 1, HPA will scale it
   selector:
     matchLabels:
       app: iris-api
@@ -25,6 +25,18 @@ spec:
           limits:
             cpu: "250m"
             memory: "256Mi"
+        
+        # --- THIS IS THE NEW SECTION ---
+        # This tells Kubernetes (and the GKE Load Balancer)
+        # how to check if your app is healthy and ready for traffic.
+        readinessProbe:
+          httpGet:
+            path: /health  # The path of our health check endpoint
+            port: 8080     # The port inside the container
+          initialDelaySeconds: 15 # Wait 15s after pod starts before first check
+          periodSeconds: 10       # Check every 10s
+          failureThreshold: 3     # Mark as "unhealthy" after 3 failures
+        # --- END OF NEW SECTION ---
 ---
 apiVersion: v1
 kind: Service
